增加echarts图表事件绑定方式

--- a/docs/styleguide/styles.less
+++ b/docs/styleguide/styles.less
@@ -151,6 +151,10 @@ div[class^="rsg--spacing"] {
   margin-top: 48px;
 }
 
+pre, div, span {
+  font-size: 14px !important;
+}
+
 #rsg-root {
   > div {
     padding-left: 0;
